[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
regex = "1.10.2"

[dev-dependencies]
rstest = "0.18.2"
divan = "0.1.4"

[features]
day01-part1 = []
day01-part2 = []
day01 = ["day01-part1", "day01-part2"]
day02-part1 = []
day02-part2 = []
day02 = ["day02-part1", "day02-part2"]
day03-part1 = []
day03-part2 = []
day03 = ["day03-part1", "day03-part2"]
all = ["day01", "day02", "day03"]

[profile.flamegraph]
inherits = "release"
debug = true

[[bench]]
name = "day01"
harness = false

[[bench]]
name = "day02"
harness = false

[[bench]]
name = "day03"
harness = false
