[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
nom = "7.1.3"
nom-supreme = "0.8.0"
num = "0.4.1"
rayon = "1.8.0"
regex = "1.10.2"

[dev-dependencies]
rstest = "0.18.2"
divan = "0.1.4"

[features]
day01-part1 = []
day01-part2 = []
day01 = ["day01-part1", "day01-part2"]
day02-part1 = []
day02-part2 = []
day02 = ["day02-part1", "day02-part2"]
day03-part1 = []
day03-part2 = []
day03 = ["day03-part1", "day03-part2"]
day04-part1 = []
day04-part2 = []
day04 = ["day04-part1", "day04-part2"]
day05-part1 = []
day05-part2 = []
day05 = ["day05-part1", "day05-part2"]
day06-part1 = []
day06-part2 = []
day06 = ["day06-part1", "day06-part2"]
day07-part1 = []
day07-part2 = []
day07 = ["day07-part1", "day07-part2"]
day08-part1 = []
day08-part2 = []
day08 = ["day08-part1", "day08-part2"]
all = ["day01", "day02", "day03", "day04", "day05", "day06", "day07", "day08"]

[profile.flamegraph]
inherits = "release"
debug = true

[[bench]]
name = "day01"
harness = false

[[bench]]
name = "day02"
harness = false

[[bench]]
name = "day03"
harness = false

[[bench]]
name = "day04"
harness = false

[[bench]]
name = "day05"
harness = false

[[bench]]
name = "day06"
harness = false

[[bench]]
name = "day07"
harness = false

[[bench]]
name = "day08"
harness = false
