[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
indexmap = "2.1.0"
nom = "7.1.3"
nom-supreme = "0.8.0"
num = "0.4.1"
rayon = "1.8.0"
regex = "1.10.2"

[dev-dependencies]
rstest = "0.18.2"
divan = "0.1.4"

[features]
day01-part1 = []
day01-part2 = []
day01 = ["day01-part1", "day01-part2"]
day02-part1 = []
day02-part2 = []
day02 = ["day02-part1", "day02-part2"]
day03-part1 = []
day03-part2 = []
day03 = ["day03-part1", "day03-part2"]
day04-part1 = []
day04-part2 = []
day04 = ["day04-part1", "day04-part2"]
day05-part1 = []
day05-part2 = []
day05 = ["day05-part1", "day05-part2"]
day06-part1 = []
day06-part2 = []
day06 = ["day06-part1", "day06-part2"]
day07-part1 = []
day07-part2 = []
day07 = ["day07-part1", "day07-part2"]
day08-part1 = []
day08-part2 = []
day08 = ["day08-part1", "day08-part2"]
day09-part1 = []
day09-part2 = []
day09 = ["day09-part1", "day09-part2"]
day10-part1 = []
day10-part1-bfs = []
day10-part2 = []
day10 = ["day10-part1", "day10-part1-bfs", "day10-part2"]
day11-part1 = []
day11-part2 = []
day11 = ["day11-part1", "day11-part2"]
day12-part1 = []
day12-part2 = []
day12 = ["day12-part1", "day12-part2"]
day13-part1 = []
day13-part2 = []
day13 = ["day13-part1", "day13-part2"]
day14-part1 = []
day14-part2 = []
day14 = ["day14-part1", "day14-part2"]
day15-part1 = []
day15-part2 = []
day15 = ["day15-part1", "day15-part2"]
day16-part1 = []
day16-part2 = []
day16 = ["day16-part1", "day16-part2"]
day17-part1 = []
day17-part2 = []
day17 = ["day17-part1", "day17-part2"]
day18-part1 = []
day18-part2 = []
day18 = ["day18-part1", "day18-part2"]
day19-part1 = []
day19-part2 = []
day19 = ["day19-part1", "day19-part2"]
day20-part1 = []
day20-part2 = []
day20 = ["day20-part1", "day20-part2"]
day21-part1 = []
day21-part2 = []
day21 = ["day21-part1", "day21-part2"]
day22-part1 = []
day22-part2 = []
day22 = ["day22-part1", "day22-part2"]
day23-part1 = []
day23-part2 = []
day23 = ["day23-part1", "day23-part2"]
all = [
  "day01",
  "day02",
  "day03",
  "day04",
  "day05",
  "day06",
  "day07",
  "day08",
  "day09",
  "day10",
  "day11",
  "day12",
  "day13",
  "day14",
  "day15",
  "day16",
  "day17",
  "day18",
  "day19",
  "day20",
  "day21",
  "day22",
  "day23",
]

[profile.flamegraph]
inherits = "release"
debug = true

[[bench]]
name = "day01"
harness = false

[[bench]]
name = "day02"
harness = false

[[bench]]
name = "day03"
harness = false

[[bench]]
name = "day04"
harness = false

[[bench]]
name = "day05"
harness = false

[[bench]]
name = "day06"
harness = false

[[bench]]
name = "day07"
harness = false

[[bench]]
name = "day08"
harness = false

[[bench]]
name = "day09"
harness = false

[[bench]]
name = "day10"
harness = false

[[bench]]
name = "day11"
harness = false

[[bench]]
name = "day12"
harness = false

[[bench]]
name = "day13"
harness = false

[[bench]]
name = "day14"
harness = false

[[bench]]
name = "day15"
harness = false

[[bench]]
name = "day16"
harness = false

[[bench]]
name = "day17"
harness = false

[[bench]]
name = "day18"
harness = false

[[bench]]
name = "day19"
harness = false

[[bench]]
name = "day20"
harness = false

[[bench]]
name = "day22"
harness = false

[[bench]]
name = "day23"
harness = false
